--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,10 +3,10 @@
 <html lang="{{ .Page.Language | default "en" }}" class="js csstransforms3d">
   <head>
     <meta charset="utf-8">
-    <meta property="og:title" content="distributed-training-workshop.go-aws.com" />
+    <meta property="og:title" content="Getting Started with Amazon SageMaker" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://distributed-training-workshop.go-aws.com" />
-    <meta property="og:image" content="https://distributed-training-workshop.go-aws.com/images/intro/home.png" />
+    <meta property="og:url" content="https://main.d2liw0uxeuzv0b.amplifyapp.com/" />
+    <meta property="og:image" content="https://main.d2liw0uxeuzv0b.amplifyapp.com/images/setup/image002.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     {{ .Hugo.Generator }}
     {{ partial "meta.html" . }}
